# secure_serialisation

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  index.html
0.2.0/aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
0.2.0/regex/: struct.RegexSplitsN.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html
0.2.0/secure_serialisation/: fn.serialise.html
0.3.0/: index.html  search-index.js
0.3.0/aho_corasick/: struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
0.3.0/rand/: struct.Generator.html
0.3.0/regex/: enum.CaptureNames.html  struct.FindCaptures.html  struct.SetMatchesIntoIter.html  struct.SetMatchesIter.html  struct.SubCaptures.html  struct.SubCapturesNamed.html
0.3.0/secure_serialisation/: fn.anonymous_deserialise.html  fn.pre_computed_deserialise.html  fn.serialise.html  index.html  sidebar-items.js
0.3.0/utf8_ranges/: struct.Utf8Sequences.html
examples/: basic.rs
latest/: search-index.js
latest/cbor/: struct.DecodedItems.html  struct.Items.html
latest/rand/: struct.AsciiGenerator.html
latest/regex/: enum.CaptureNames.html  struct.FindCaptures.html  struct.FindMatches.html  struct.RegexSplits.html  struct.SubCaptures.html
latest/secure_serialisation/: fn.deserialise.html  fn.pre_computed_serialise.html  index.html
latest/utf8_ranges/: struct.Utf8Sequences.html
master/: search-index.js
master/aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
master/cbor/: struct.DecodedItems.html  struct.Items.html
master/rand/: struct.AsciiGenerator.html  struct.Generator.html
master/regex/: enum.CaptureNames.html  struct.CaptureNames.html  struct.FindCaptures.html  struct.FindMatches.html  struct.RegexSplits.html  struct.RegexSplitsN.html  (+5 more)
src/: lib.rs
(+138 files in other folders)
