[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Functions to encode/decode and encrypt/decrypt data using public-key, authenticated encryption."
documentation = "https://docs.rs/secure_serialisation"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "secure_serialisation"
readme = "README.md"
repository = "https://github.com/maidsafe/secure_serialisation"
version = "0.4.0"

[dependencies]
maidsafe_utilities = "~0.14.0"
rust_sodium = "~0.5.0"
serde = "~1.0.11"
serde_derive = "~1.0.11"

[dev-dependencies]
rand = "~0.3.15"
unwrap = "~1.1.0"
