[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Functions to encode/decode and encrypt/decrypt data using public-key, authenticated encryption."
documentation = "https://docs.rs/secure_serialisation"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "secure_serialisation"
readme = "README.md"
repository = "https://github.com/maidsafe/secure_serialisation"
version = "0.5.0"
edition = "2018"

[dependencies]
maidsafe_utilities = "~0.16.0"
quick-error = "~1.2.1"
rust_sodium = "~0.10.0"
serde = "~1.0.11"
serde_derive = "~1.0.11"

[dev-dependencies]
rand = "~0.3.15"
unwrap = "~1.2.0"
